# im2a

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  Makefile.am  README.md  asciifier.cpp  asciifier.h  config.h.in  configure.ac  im2a.cpp  options.cpp  options.h  term_info.cpp  term_info.h  version.h
m4/: imagemagick.m4
misc/: im2a.rb
src/: CMakeLists.txt  Makefile.am  asciifier.cpp  asciifier.h  im2a.1  im2a.cpp  options.cpp  options.h  term_info.cpp  term_info.h
